add: graphs with cycles of 4 or more nodes

--- a/triangle_dataset/triangles.ipynb
+++ b/triangle_dataset/triangles.ipynb
@@ -116,6 +116,56 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### ------------------------------------------------------------------------------------------------------------------"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Dataset with same number of edges"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# for tree in graphs_without_cycles:\n",
+    "#     nodes_with_degree_1 = {node: list(tree.neighbors(node)) for node in tree.nodes() if tree.degree(node) == 1}\n",
+    "#     # print(nodes_with_degree_1)\n",
+    "#     # pairs of nodes of degree 1 with different neighbors\n",
+    "#     pairs = [(node1, node2) for node1, neighbors1 in nodes_with_degree_1.items() for node2, neighbors2 in nodes_with_degree_1.items() if node1 < node2 and neighbors1 != neighbors2]\n",
+    "#     print(pairs)\n",
+    "#     # Select a random pair of nodes and add that edge to the tree\n",
+    "#     if len(pairs) > 0:\n",
+    "#         node1, node2 = random.choice(pairs)\n",
+    "#         print(f'Adding edge between {node1} and {node2}')\n",
+    "#         tree.add_edge(node1, node2)\n",
+    "\n",
+    "# plot_graphs(graphs_without_cycles[:10], node_participation_without_cycles, num_nodes, False)  # Plot the first 10 non-isomorphic graphs without cycles"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# # Print the number of edges in each graph and which type of graph it is\n",
+    "# for g in graphs_without_cycles:\n",
+    "#     print(f\"Number of edges: {g.number_of_edges()}, Is tree: {nx.is_tree(g)}\")\n",
+    "\n",
+    "# print(\"Graphs with cycles\")\n",
+    "# for g in graphs_with_cycles:\n",
+    "#     print(f\"Number of edges: {g.number_of_edges()}, Is tree: {nx.is_tree(g)}\")"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 755,
    "metadata": {},
